--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuclear/ui",
-	"version": "0.6.17",
+	"version": "1.0.0",
 	"description": "Nuclear - UI components",
 	"author": "nukeop <nukeop@gumblert.tech>",
 	"homepage": "https://github.com/nukeop/nuclear/tree/master/packages/ui#readme",
@@ -70,7 +70,7 @@
 		"typescript": "^4.2.4"
 	},
 	"dependencies": {
-		"@nuclear/core": "0.6.17",
+		"@nuclear/core": "^1.0.0",
 		"butterchurn": "^2.6.7",
 		"butterchurn-presets": "^2.4.7",
 		"classnames": "^2.2.6",
